# Espacio-TSC

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD
migrations/: 001_initial.sql  002_users.sql  003_post_edited.sql  004_post_previous_content.sql
src/: alias.rs  db.rs  errors.rs  main.rs  models.rs  router.rs  state.rs  user.rs
src/handlers/: forum.rs  home.rs  mod.rs  mood.rs  resources.rs
static/js/: forum-bubbles.js  theme-toggle.js
templates/: base.html  index.html
templates/forum/: edit_form.html  my_posts.html  page.html  post_body.html  reply_item.html  thread_item.html
templates/mood/: confirmation.html  historial.html
templates/resources/: list_partial.html  page.html
